--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
 LINE_CHANNEL_SECRET=your_channel_secret
 LINE_CHANNEL_ACCESS_TOKEN=your_channel_access_token
 OPENAI_API_KEY=your_openai_api_key
+NOTION_API_KEY=your_notion_api_key
+NOTION_DATABASE_ID=your_notion_database_id
