feat: 實作圖片筆記與 Line ID 權限控管功能 (移除大圖檔以修復推送問題)

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,5 @@ LINE_CHANNEL_ACCESS_TOKEN=your_channel_access_token
 OPENAI_API_KEY=your_openai_api_key
 NOTION_API_KEY=your_notion_api_key
 NOTION_DATABASE_ID=your_notion_database_id
+GOOGLE_DRIVE_FOLDER_ID=your_google_drive_folder_id  
+ALLOWED_LINE_ID=your_line_user_id   
