--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,4 +12,9 @@ dependencies = [
     "openai>=2.14.0",
     "pyngrok>=7.5.0",
     "notion-client>=2.7.0",
+    "google-api-python-client>=2.187.0",
+    "google-auth-httplib2>=0.3.0",
+    "google-auth-oauthlib>=1.2.3",
+    "pytz>=2025.2",
+    "trafilatura>=2.0.0",
 ]
