--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,4 @@ NOTION_DATABASE_ID=your_notion_database_id
 GOOGLE_DRIVE_FOLDER_ID=your_google_drive_folder_id
 ALLOWED_LINE_ID=your_line_user_id
 APIFY_API_KEY=your_apify_api_key
+THREADS_ACTOR_ID=sinam7/threads-post-scraper
